--- a/css/addstyle.css
+++ b/css/addstyle.css
@@ -2,12 +2,9 @@
     width: 100%;
     overflow: hidden;
 }
-/* HOME メイン画像 */
 .index-top {
     height: 100vh;
-    /* 子どもたちの写真 */
-    /* background-image: url("../img/3707648_s.jpg"); */
-    background-image: url("../img/AdobeStock_183317369.jpeg");
+    background-image: url("../img/naitochildclinicimg.png");
     background-position: center 30%;
     background-size: cover;
     position: relative;
@@ -19,21 +16,17 @@
     -webkit-transform: scale(1.01);
     transform: scale(1.01);
 }
-/* ホームの固定背景の画像 */
 .obi_001 {
-    background-image: url("../img/tanaphong-toochinda-GagC07wVvck-unsplash.jpg");
+    background-image: url("../img/AdobeStock_216146718.jpeg");
     background-size: cover;
+    width: 100%;
 }
-.obi_001 h2 {
-    text-shadow: 1px 1px 2px #000;
-}
+
 .obi_001 h2 span {
     text-shadow: none;
 }
-/* HOME 理念　文章  */
 .obi_001 p {
-    font-size: 20px;
-    text-shadow: 0.5px 0.5px 1px #000;
+    font-size: 18px;
     margin-bottom: 50px;
 }
 .box_right.coram-box {
@@ -71,10 +64,8 @@
     margin: 0 0 !important;
     padding: 0 20px !important;
 }
-/* HOME 診療予定　  */
 .table-area {
     max-width: 800px;
-    /* margin: 40px auto !important; */
     margin: 0 auto;
     margin-top: 40px;
     margin-bottom: 100px;
@@ -83,20 +74,17 @@
     margin: 40px auto;
     width: 100%;
 }
-/* 診療予定　時間 */
 .table-area__textbox {
     margin-left: 75px;
 }
-/* 診療予定　表 */
 .schedule-table {
     color: #444;
-    background-color: #eeeeee;
+    background-color: rgba(212, 243, 238, 0.3);
     border-radius: 20px;
 }
 .schedule-table__time {
     white-space: nowrap;
 }
-/* 診療予定　日時 */
 .inline-text {
     display: inline-block;
     margin-right: 30px;
@@ -135,22 +123,16 @@
 .base-info {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+
     align-items: center;
     padding: 10px;
 }
 .base-info__logo img {
     object-fit: cover;
     object-position: 80% 0;
-    width: 100%;
-    height: 100%;
+    width: 70px;
 }
 .base-info__text {
     text-align: left;
     margin-left: 10px;
-}
-.map {
-    width: auto;
-    height: 300px;
-    background: #ccc;
 }
