--- a/css/addstyle.css
+++ b/css/addstyle.css
@@ -68,7 +68,7 @@
     max-width: 800px;
     margin: 0 auto;
     margin-top: 40px;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
 }
 .table-area__table {
     margin: 40px auto;
