--- a/css/erikastyle.css
+++ b/css/erikastyle.css
@@ -23,7 +23,7 @@ header {
 }
 
 .content {
-    margin-top: 100px;
+    /* margin-top: 100px; */
     margin-bottom: 100px;
 }
 .cont_wrap.effect.clfix h2 {
@@ -43,7 +43,7 @@ header {
 
 .home-concept-box {
     background-color: rgba(212, 243, 238, 0.3);
-    padding-bottom: 50px;
+    padding-top: 30px;
     max-width: 900px;
     width: 100%;
 }
