--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ header h1 a img {
     padding-bottom: 15px;
     padding-left: 44px;
     font-weight: normal;
-    color: #78c7dd;
+    color: rgb(59, 215, 220);
     font-family: "Zen Maru Gothic", "ヒラギノ明朝 ProN W3",
         "Hiragino Mincho ProN", "游明朝", "YuMincho", "Sawarabi Mincho",
         "HG明朝E", "ＭＳ Ｐ明朝", "MS PMincho", serif;
